frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-frontend
spec:
  selector:
    matchLabels:
      app: quiz-frontend
  template:
    metadata:
      labels:
        app: quiz-frontend
    spec:
      containers:
        - name: quiz-frontend
          image: ${dockerhubname}/${Service}:${BUILD_ID}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: quiz-frontend
  type: ClusterIP
status:
  loadBalancer: {}
